QCTECH-141: Replace Defect Dojo with GHAS

--- a/action.yml
+++ b/action.yml
@@ -3,6 +3,10 @@ description: |
   Run psalm with --taint-analysis and upload sarif file artifact
 
 inputs:
+  report-name:
+    description: "Report name"
+    required: false
+    default: "psalm-taint-analysis"
   report-retention-days:
     description: "Duration in days to preserve reports."
     required: false
@@ -11,23 +15,6 @@ inputs:
     description: "Workflow working directory"
     default: '.'
     required: false
-  defectdojo-publish:
-    description: "Publish sarif report to defectdojo"
-    required: false
-    default: 'false'
-  defectdojo-url:
-    description: "DefectDojo URL"
-    required: false
-    default: ''
-  defectdojo-token:
-    description: "DefectDojo Token"
-    required: false
-    default: ''
-  defectdojo-engagement:
-    description: "DefectDojo Engagement name or id"
-    required: false
-    default: ''
-
 
 runs:
   using: "composite"
@@ -46,19 +33,7 @@ runs:
         retention-days: ${{ inputs.report-retention-days }}
 
     - name: Publish report
-      if: inputs.defectdojo-publish == 'true'
-      id: import-scan
-      uses: ivanamat/defectdojo-import-scan@v1
+      uses: github/codeql-action/upload-sarif@v2
       with:
-        token: ${{ inputs.defectdojo-token }}
-        defectdojo_url: ${{ inputs.defectdojo-url }}
-        file: ${{ inputs.working-directory }}/psalm-taint-analysis.sarif
-        scan_type: SARIF
-        engagement: ${{ inputs.defectdojo-engagement }}
-
-    - name: Show response
-      if: inputs.defectdojo-publish == 'true'
-      shell: bash
-      run: |
-        set -e
-        printf '%s\n' '${{ steps.import-scan.outputs.response }}'
+        category: ${{ inputs.report-name }}
+        sarif_file: ${{ inputs.working-directory }}/psalm-taint-analysis.sarif
